# win32-helloworld

./: CMakeLists.txt  LICENSE  Makefile  README.md  modules.mk
src/: main.c
src/c/helloapi/: CMakeLists.txt  Makefile
src/c/helloapi/src/: main.c
